# python-training-materials

./: README.md
Module 0/: readme.md
Module 1/: Overview.ipynb  The Zen of Python.ipynb  Tuples.ipynb
Module 1 /: Debugging.ipynb  ZenOfPython.md
Module 1 - Intro to Python Programming/: Python Operators.ipynb  Python Syntax and Data Types.ipynb  The Zen of Python.ipynb  ZenOfPython.md
Module 2/: Builtins.ipynb  Comprehensions.ipynb  Dictionaries.ipynb  Exceptions.ipynb  Functions.ipynb  Lambdas.ipynb  Lists.ipynb  Overview.ipynb  Scratch.ipynb  Sets.ipynb  Strings.ipynb  Tuples.ipynb
Module 2/.ipynb_checkpoints/: Lists-checkpoint.ipynb  Overview-checkpoint.ipynb
Module 3/: Date & Time.ipynb  Modules and Imports.ipynb  Numpy and Matplotlib.ipynb  OS and System.ipynb  Overview.ipynb  my_database.db  pokemon.csv  pokemon_out.csv  pyproject.toml
Module 3/.ipynb_checkpoints/: File Input & Output-checkpoint.ipynb  Regular Expressions-checkpoint.ipynb  Requests-checkpoint.ipynb  SQL Alchemy-checkpoint.ipynb  output-checkpoint.txt
Module 4/: classes.ipynb  inheritance.ipynb  mixins.ipynb
Module 4/.ipynb_checkpoints/: classes-checkpoint.ipynb  dataclasses-checkpoint.ipynb  inheritance-checkpoint.ipynb  (+1 more)
Module 5/: Context Managers.ipynb  Debugging.ipynb  Decorators.ipynb  Generators.ipynb  Iterators.ipynb  Metaclasses.ipynb  Multiprocessing.ipynb  Multithreading.ipynb  generator.ipynb  iterator.ipynb
Module 6/: Data Visualization.ipynb  Intro to pandas - Olympics.ipynb  Pandas - Merging and Joining.ipynb  original_pandas_intro.ipynb  pyproject.toml
