[tool.poetry]
name = "python-training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_training"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
jupyter = "^1.0.0"
numpy = "^1.25.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.19"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
