[tool.poetry]
name = "module 5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.1.1"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
pygwalker = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
